# tree-sitter-fraz

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.go  tree-sitter.json
bindings/c/: tree-sitter-fraz.pc.in
bindings/c/tree_sitter/: tree-sitter-fraz.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fraz/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFrazTests/: TreeSitterFrazTests.swift
examples/: airlines-a.fraz  airlines.fraz  basic-bu.fraz  basic.fraz  test.fraz
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
